hamburger flex direction & responsive content to navbar

--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
         <ul class="menu">
           <li>Home</li>
           <li>About</li>
-          <li>Experiences</li>
+          <li>Projects</li>
           <li>Contact</li>
         </ul>
       </section>
     </header>
     <main>
-      <h1>Welcome to my personal website</h1>
-      <p>Here you can find information about me, my work experience, and my hobbies.</p>
+      <div id="intro1">
+        <h1>Welcome to my personal website</h1>
+        <p>Here you can find information about me, my work experience, and my hobbies.</p>
+      </div>
     </main>
     <div id="intro">
       <h3>Intro here</h3>
