--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <main>  
     </main>
     <div id="intro">
-      <h3>Intro here</h3>
+      <h1 id="hello">Hello!</h1>
+      <h2 id="name1">I am John Kyle Joseph Reyes</h2>
+      <p id="smolintro">an aspiring full-stack developer with a passion for creating dynamic and engaging web applications. Although I am new to the field, I am dedicated to learning as much as possible and becoming a skilled developer.</p>
     </div>
       <!--<button type="submit" onclick="window.open('file.doc')">Download!</button> -->
     <footer>
