--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
         </ul>
       </section>
     </header>
-    <main>  
-    </main>
-    <div id="intro">
-      <h1 id="hello">Hello!</h1>
-      <h2 id="name1">I am John Kyle Joseph Reyes</h2>
-      <p id="smolintro">an aspiring full-stack developer with a passion for creating dynamic and engaging web applications. Although I am new to the field, I am dedicated to learning as much as possible and becoming a skilled developer.</p>
+    <div class="wrapper">
+        <img id="image" src="images/image.png" alt="an image">
+        <article class="content">
+          <h1 id="hello">Hello!</h1>
+          <h2 id="name1">I am John Kyle Joseph Reyes</h2>
+          <p id="p1" >an aspiring full-stack developer with a passion for creating dynamic and engaging web applications. Although I am new to the field, I am dedicated to learning as much as possible and becoming a skilled developer.</p>
+        </article>
     </div>
       <!--<button type="submit" onclick="window.open('file.doc')">Download!</button> -->
     <footer>
