--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="menu-button"></div>
         </label>
         <ul class="menu">
-          <li>Home</li>
+          <li>Home</li> <!--<a href="#bottom">Go to Bottom</a>-->
           <li>About</li>
           <li>Projects</li>
           <li>Contact</li>
@@ -32,6 +32,15 @@
           <h2 id="name1">I am John Kyle Joseph Reyes</h2>
           <p id="p1" >an aspiring full-stack developer with a passion for creating dynamic and engaging web applications. Although I am new to the field, I am dedicated to learning as much as possible and becoming a skilled developer.</p>
         </article>
+    </div>
+    <div class="about">
+
+    </div>
+    <div class="projects">
+
+    </div>
+    <div class="contacts">
+
     </div>
       <!--<button type="submit" onclick="window.open('file.doc')">Download!</button> -->
     <footer>
