fixed nav postion

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
           <div class="menu-button"></div>
         </label>
         <ul class="menu">
-          <li>Home</li> <!--<a href="#bottom">Go to Bottom</a>-->
-          <li>About</li>
-          <li>Projects</li>
-          <li>Contact</li>
+          <li onclick="window.location.href='#intr'">Home</li> <!--<a href="#bottom">Go to Bottom</a>-->
+          <li onclick="window.location.href='#abt'">About</li>
+          <li onclick="window.location.href='#prjs'">Projects</li>
+          <li onclick="window.location.href='#cntcs'">Contact</li>
         </ul>
       </section>
     </header>
-    <div class="wrapper">
+    <div class="wrapper" id="intr">
         <img id="image" src="images/image.png" alt="an image">
         <article class="content">
           <h1 id="hello">Hello!</h1>
@@ -33,13 +33,13 @@
           <p id="p1" >an aspiring full-stack developer with a passion for creating dynamic and engaging web applications. Although I am new to the field, I am dedicated to learning as much as possible and becoming a skilled developer.</p>
         </article>
     </div>
-    <div class="about">
+    <div class="about" id="abt">
+      
+    </div>
+    <div class="projects" id="prjs">
 
     </div>
-    <div class="projects">
-
-    </div>
-    <div class="contacts">
+    <div class="contacts" id="cntcs">
 
     </div>
       <!--<button type="submit" onclick="window.open('file.doc')">Download!</button> -->
