update skills and exp

--- a/index.html
+++ b/index.html
@@ -34,7 +34,85 @@
         </article>
     </div>
     <div class="about" id="abt">
-      
+      <h2 id="ab">About</h2>
+      <p id="p2">My background includes coursework in programming languages such as JavaScript, HTML/CSS, and Python. I have experience with various front-end and back-end development.While I may not have a lot of professional experience yet, I have worked on several personal projects to hone my skills and explore new technologies.</p>
+      <ul id="exp">
+        <h4>Experience & Skills</h4>
+        <li>OJT INTERN BACKEND WEB DEVELOPER - Startup Project Ventures</li>
+        <li>TECHNICAL ASSISTANT - Municipality of Leganes</li>
+        <li>TECHNICAL ASSISTANT - (EDTMIS - COS) Cooperative Development Authority</li>
+      </ul>
+      <table id="skills">
+        <tr>
+          <td>
+            <div class="skillwrap">HTML
+              <div class="skillcont">
+                is the standard markup language for Web pages
+              </div> 
+            </div>
+          </td>
+          <td>
+            <div class="skillwrap">CSS
+              <div class="skillcont">
+                is the language we use to style an HTML document
+              </div> 
+            </div>
+          </td>
+          <td>
+            <div class="skillwrap">JavaScript
+              <div class="skillcont">
+                is the programming language of the Web
+              </div> 
+            </div>
+          </td>
+        </tr><br>
+        <tr>
+          <td>
+            <div class="skillwrap">PHP
+              <div class="skillcont">
+                is a server scripting language, and a powerful tool for making dynamic and interactive Web pages
+              </div> 
+            </div>
+          </td>
+          <td>
+            <div class="skillwrap">MYSQL
+              <div class="skillcont">
+                is a widely used relational database management system (RDBMS)
+              </div> 
+            </div>
+          </td>
+          <td>
+            <div class="skillwrap">JQUERY
+              <div class="skillcont">
+                is a JavaScript Library, greatly simplifies JavaScript programming
+              </div> 
+            </div>
+          </td>
+        </tr><br>
+        <tr>
+          <td>
+            <div class="skillwrap">Python
+              <div class="skillcont">
+                can be used on a server to create web applications
+              </div> 
+            </div>
+          </td>
+          <td>
+            <div class="skillwrap">Bootstrap
+              <div class="skillcont">
+                is the world's most famous free CSS framework
+              </div> 
+            </div>
+          </td>
+          <td>
+            <div class="skillwrap">C/C++/C#
+              <div class="skillcont">
+                HTML is the standard markup language for Web pages
+              </div> 
+            </div>
+          </td>
+        </tr>
+      </table>
     </div>
     <div class="projects" id="prjs">
 
