low voltage save

--- a/index.html
+++ b/index.html
@@ -91,23 +91,23 @@
         </tr><br>
         <tr>
           <td>
-            <div class="skillwrap">Python
+            <div class="skillwrap">PYTHON
               <div class="skillcont">
                 can be used on a server to create web applications
               </div> 
             </div>
           </td>
           <td>
-            <div class="skillwrap">Bootstrap
+            <div class="skillwrap">BOOTSTRAP
               <div class="skillcont">
                 is the world's most famous free CSS framework
               </div> 
             </div>
           </td>
           <td>
-            <div class="skillwrap">C/C++/C#
+            <div class="skillwrap">JAVA
               <div class="skillcont">
-                HTML is the standard markup language for Web pages
+                is used to develop mobile apps, web apps, desktop apps, games and much more
               </div> 
             </div>
           </td>
@@ -115,7 +115,7 @@
       </table>
     </div>
     <div class="projects" id="prjs">
-
+      
     </div>
     <div class="contacts" id="cntcs">
 
