--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul class="menu">
           <li onclick="window.location.href='#intr'">Home</li> <!--<a href="#bottom">Go to Bottom</a>-->
           <li onclick="window.location.href='#abt'">About</li>
-          <li onclick="window.location.href='#prjs'">Projects</li>
+          <li onclick="window.location.href='#prjs'">Gallery</li>
           <li onclick="window.location.href='#cntcs'">Contact</li>
         </ul>
       </section>
@@ -115,12 +115,11 @@
       </table>
     </div>
     <div class="projects" id="prjs">
-      <img id="iproj" src="images/background.png" alt="test" style="width: 200px; height: 200px;">
-      <input type="radio" id="img1" name="projects" value="1">   
-      <input type="radio" id="img2" name="projects" value="2">   
-      <input type="radio" id="img3" name="projects" value="3">
-      <input type="radio" id="img4" name="projects" value="4">   
-      <input type="radio" id="img5" name="projects" value="5">   
+      <div id="gallery">
+        <h2>Gallery</h2>
+        <img src="images/Galleria.gif" alt="" id="mainimg" style="width: 80%; height: 500px;">
+      </div>
+    </div>
     </div>
     <div class="contacts" id="cntcs">
       <h3>Feel free to contact me through:</h3>
