some personal info

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
           <h1 id="hello">Hello!</h1>
           <h2 id="name1">I am John Kyle Joseph Reyes</h2>
           <p id="p1" >an aspiring full-stack developer with a passion for creating dynamic and engaging web applications. Although I am new to the field, I am dedicated to learning as much as possible and becoming a skilled developer.</p>
+          <p id="ploc">Iloilo City</p>
+          <p id="pbdy">3/13/1998</p>
         </article>
     </div>
     <div class="about" id="abt">
